# ai-image-studio

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
scripts/: generate-icons.mjs
src/: App.vue  Image2svip.vue  image2svip.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/layout/: MainLayout.vue  Sidebar.vue
src/services/: api.ts
src/stores/: app.ts  images.ts  settings.ts
src/views/: GalleryView.vue  GenerateView.vue  SettingsView.vue  TemplatesView.vue
