[package]
name = "ai-image-studio"
version = "0.1.0"
description = "AI Image Generation Studio"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "ai_image_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
